--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/grey_black"
-    tools:context=".ui.about_us.AboutUsFragment">
+    tools:context=".ui.about_us.fragment.AboutUsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_pasal"
