--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,37 +59,35 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp" />
 
+
         <ImageButton
             android:id="@+id/btn_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/btn_check"
-            android:layout_marginStart="7dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginBottom="7dp"
-            android:layout_marginEnd="10dp"
-            android:layout_toStartOf="@+id/btn_save"
+            android:layout_below="@+id/btn_check"
+            android:layout_alignEnd="@+id/btn_check"
+            android:layout_margin="7dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/button_share"
             app:srcCompat="@drawable/ic_baseline_share" />
 
-        <ImageButton
-            android:id="@+id/btn_save"
+        <TextView
+            android:id="@+id/tv_sentimen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="7dp"
-            android:layout_below="@id/btn_check"
-            android:layout_alignEnd="@id/btn_check"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/button_share"
-            app:srcCompat="@drawable/ic_baseline_bookmark" />
+            android:layout_below="@id/btn_share"
+            android:layout_centerInParent="true"
+            android:textColor="@color/white"
+            android:fontFamily="@font/poppins_regular"
+            android:textSize="16sp"
+            tools:text="@string/negatif" />
 
         <ImageView
             android:id="@+id/img_ok"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/ok"
-            android:layout_below="@id/btn_share"
+            android:layout_below="@id/tv_sentimen"
             android:contentDescription="@string/ok"
             android:layout_marginTop="12dp"
             android:layout_centerHorizontal="true"
@@ -102,7 +100,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/not_ok"
-            android:layout_below="@id/btn_share"
+            android:layout_below="@id/tv_sentimen"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="12dp"
