--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/home_fragment">
+    android:background="@color/grey_black">
+
+    <View
+        android:id="@+id/waveView"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@drawable/ic_purple_wave"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textField"
@@ -15,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="100dp"
         android:hint="@string/label"
         android:textColorHint="@color/white"
@@ -23,7 +33,7 @@
         app:endIconTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/waveView">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_comment"
@@ -38,7 +48,6 @@
             android:scrollbars="vertical"
             android:textColor="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
-
 
     <Button
         android:id="@+id/btn_check"
@@ -57,28 +66,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textField" />
 
-
     <TextView
         android:id="@+id/tv_sentimen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
-        android:layout_marginStart="23dp"
         android:layout_marginTop="18dp"
-        android:layout_marginEnd="330dp"
         android:layout_marginBottom="77dp"
         android:text="@string/check"
-        app:layout_constraintBottom_toTopOf="@+id/textField"
+        app:layout_constraintTop_toBottomOf="@id/btn_check"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/img_ok"
-        android:layout_width="298dp"
-        android:layout_height="191dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="20dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,9 +92,9 @@
 
     <ImageButton
         android:id="@+id/btn_send"
-        android:layout_width="114dp"
-        android:layout_height="113dp"
-        android:layout_marginTop="6dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/paper_plane"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,15 +105,29 @@
 
     <ImageView
         android:id="@+id/img_not_ok"
-        android:layout_width="305dp"
-        android:layout_height="164dp"
-        android:layout_marginTop="75dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="20dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_check"
         app:srcCompat="@drawable/not_ok"
         tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/kata_kasar_detected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/kata_kasar_detected"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="16sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_not_ok" />
 
     <TextView
         android:id="@+id/langgar_pasal_detected"
@@ -119,28 +137,38 @@
         android:text="@string/langgar_pasal_detected"
         android:textColor="@color/light_blue_primary"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btn_send"
+        android:layout_marginTop="5dp"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/kata_kasar_detected"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_not_ok"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/undang_undang"
-        android:layout_width="wrap_content"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/pasal_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/nama_pasal"
-        android:textColor="@color/white"
-        android:textSize="20sp"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="32dp"
         android:visibility="invisible"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/purple_primary"
+        app:cardBackgroundColor="@color/grey_black"
+        app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/langgar_pasal_detected" />
+        app:layout_constraintTop_toBottomOf="@+id/langgar_pasal_detected">
+
+        <TextView
+            android:id="@+id/undang_undang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_bold"
+            android:gravity="center"
+            android:padding="8dp"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:visibility="invisible" />
+    </com.google.android.material.card.MaterialCardView>
 
 
     <ProgressBar
