--- a/app/src/main/res/layout/fragment_about_aplod.xml
+++ b/app/src/main/res/layout/fragment_about_aplod.xml
@@ -74,14 +74,16 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="299dp"
-        android:layout_height="197dp"
+        android:layout_width="150dp"
+        android:layout_height="180dp"
+        android:layout_marginBottom="110dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/hate_speech" />
+        app:srcCompat="@drawable/hate_speech"
+        tools:ignore="ContentDescription" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
